a1/brendan_gordon/TEST_PROGRAMS/invalidtype/armin_taheri/invalidtype3.min
var x: int;
var y: float;

y = 3.0/2 + 4;
x = y;

read y;

